html js arrow funtion param sans parenthèses

--- a/src/main/resources/templates/essaim/essaimAssociation.html
+++ b/src/main/resources/templates/essaim/essaimAssociation.html
@@ -9,7 +9,7 @@
 				dom: 'lftip',
 				scrollX: true,
 			});
-			avecE.addEventListener('click', (event) => {
+			avecE.addEventListener('click', event => {
 				table.draw();
 			});
 			$.fn.dataTable.ext.search.push(
