--- a/src/main/resources/templates/hausse/haussesListe.html
+++ b/src/main/resources/templates/hausse/haussesListe.html
@@ -50,7 +50,7 @@
 				}
 			}
 			table.on('select deselect', updateLinks);
-			document.getElementById('commentaire').addEventListener('click', (event) => {
+			document.getElementById('commentaire').addEventListener('click', event => {
 				if (event.target.getAttribute('href') === '#') {
 					alert(selectHaTrait);
 				}
