--- a/src/main/resources/templates/personne/personneDetail.html
+++ b/src/main/resources/templates/personne/personneDetail.html
@@ -7,7 +7,7 @@
 		const pnnonsupp = /*[[#{personnenonsupprimeerefrrucher}]]*/ null;
 		const supppers = /*[[#{supprimercettepersonne}]]*/ null;
 		document.addEventListener('DOMContentLoaded', () => {
-			document.getElementById('supprime').addEventListener('click', (event) => {
+			document.getElementById('supprime').addEventListener('click', event => {
 				if (notListEmpty) {
 					alert(pnnonsupp);
 				} else if (confirm(supppers)) {
