--- a/src/main/resources/templates/ruchetype/rucheTypeDetail.html
+++ b/src/main/resources/templates/ruchetype/rucheTypeDetail.html
@@ -12,7 +12,7 @@
 		const suppTypeRuche = /*[[#{suppTypeRuche}]]*/null;
 		const typeRucheSuppNon = /*[[#{typeRucheSuppNon}]]*/null;
 		document.addEventListener('DOMContentLoaded', () => {
-			document.getElementById('supprime').addEventListener('click', (event) => {
+			document.getElementById('supprime').addEventListener('click', event => {
 				if (nbRuchesTotal !== 0) {
 					alert(typeRucheSuppNon);
 				} else if (confirm(suppTypeRuche)) {
