--- a/src/main/resources/templates/evenement/evenementSucreDetail.html
+++ b/src/main/resources/templates/evenement/evenementSucreDetail.html
@@ -5,7 +5,7 @@
 	<script th:inline="javascript">
 		const suppeve = /*[[#{supprimerevenement}]]*/null;
 		document.addEventListener('DOMContentLoaded', () => {
-			document.getElementById('supprime').addEventListener('click', (event) => {
+			document.getElementById('supprime').addEventListener('click', event => {
 				if (confirm(suppeve)) {
 					return;
 				}
