recolteDetail.js cookie pour conserver l'état de l'affichage raw

--- a/src/main/resources/templates/recolte/recolteDetail.html
+++ b/src/main/resources/templates/recolte/recolteDetail.html
@@ -94,8 +94,8 @@
 						</h6>
 					</div>
 					<div class="col">
-						<span class="padicons"> <input type="checkbox" id="raw" /> <label for="raw"
-								th:text="#{Brut}"></label>
+						<span class="padicons"> <input type="checkbox" id="raw" />
+							<label for="raw" th:text="#{Brut}"></label>
 						</span>
 					</div>
 				</div>
