--- a/src/main/resources/templates/ruche/rucheAjoutRetrait.html
+++ b/src/main/resources/templates/ruche/rucheAjoutRetrait.html
@@ -21,21 +21,70 @@
 					{orderable: false}
 				]
 			});
-			tableRetrait.on('row-reordered', function (e, diff) {
-				if (diff.length === 0) {return;}
+
+			/*
+			const dataTableElement = document.querySelector('#retraitHausses');
+			dataTableElement.addEventListener('row-reordered', function (e) {
+				const diff = e.detail;
+				alert(diff.length);
+				if (diff.length === 0) {
+					return;
+				}
+
 				const hausses = [];
-				$('#retraitHausses tbody tr a').each(function () {
-					const href = $(this).attr('href');
+				const aElements = document.querySelectorAll('#retraitHausses tbody tr a');
+
+				aElements.forEach(function (aElement) {
+					const href = aElement.getAttribute('href');
 					hausses.push(href.substring(href.lastIndexOf('/') + 1));
 				});
+
 				const requestData = {hausses: hausses};
 				requestData[_csrf_param_name] = _csrf_token;
-				$.post(urlRucheOdreHause + rucheId,
-					requestData).done(function (data) {
+
+				fetch(urlRucheOdreHause + rucheId, {
+					method: 'POST',
+					body: JSON.stringify(requestData),
+					headers: {
+						'Content-Type': 'application/json'
+					}
+				})
+					.then(function (response) {
+						return response.text();
+					})
+					.then(function (data) {
 						if (data !== 'OK') {
 							alert(data);
 						}
+					})
+					.catch(function (error) {
+						console.error(error);
 					});
+			});
+			*/
+
+
+
+			tableRetrait.on('row-reordered', function (e, diff) {
+				if (diff.length === 0) {return;}
+				const hausses = [];
+				const aElements = document.querySelectorAll('#retraitHausses tbody tr a');
+				aElements.forEach(function (aElement) {
+					const href = aElement.getAttribute('href');
+					hausses.push(href.substring(href.lastIndexOf('/') + 1));
+				});
+				const xhr = new XMLHttpRequest();
+				xhr.open('POST', urlRucheOdreHause + rucheId, true);
+				xhr.setRequestHeader('Content-Type', 'application/json');
+				xhr.setRequestHeader('x-csrf-token', _csrf_token);
+				xhr.onreadystatechange = () => {
+					if (xhr.readyState === XMLHttpRequest.DONE && xhr.status === 200) {
+						if (xhr.responseText !== 'OK') {
+							alert(xhr.responseText);
+						}
+					}
+				};
+				xhr.send(JSON.stringify(hausses));
 			});
 			new DataTable('#ajoutHausses');
 		});
