--- a/src/main/resources/templates/ruche/rucheAjoutRetrait.html
+++ b/src/main/resources/templates/ruche/rucheAjoutRetrait.html
@@ -2,92 +2,11 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
+	<script th:replace="~{include :: jsruches}"></script>
 	<script th:inline="javascript">
 		const _csrf_token = /*[[${_csrf.token}]]*/null;
-		const _csrf_param_name = /*[[${_csrf.parameterName}]]*/null;
 		const urlRucheOdreHause = /*[[@{/ruche/ordreHausses/}]]*/null;
 		const rucheId = /*[[${ruche.id}]]*/null;
-		document.addEventListener('DOMContentLoaded', () => {
-			const tableRetrait = new DataTable('#retraitHausses', {
-				paging: false,
-				searching: false,
-				info: false,
-				ordering: true,
-				rowReorder: {
-					selector: 'tr'
-				},
-				columns: [
-					{orderable: false},
-					{orderable: false}
-				]
-			});
-
-			/*
-			const dataTableElement = document.querySelector('#retraitHausses');
-			dataTableElement.addEventListener('row-reordered', function (e) {
-				const diff = e.detail;
-				alert(diff.length);
-				if (diff.length === 0) {
-					return;
-				}
-
-				const hausses = [];
-				const aElements = document.querySelectorAll('#retraitHausses tbody tr a');
-
-				aElements.forEach(function (aElement) {
-					const href = aElement.getAttribute('href');
-					hausses.push(href.substring(href.lastIndexOf('/') + 1));
-				});
-
-				const requestData = {hausses: hausses};
-				requestData[_csrf_param_name] = _csrf_token;
-
-				fetch(urlRucheOdreHause + rucheId, {
-					method: 'POST',
-					body: JSON.stringify(requestData),
-					headers: {
-						'Content-Type': 'application/json'
-					}
-				})
-					.then(function (response) {
-						return response.text();
-					})
-					.then(function (data) {
-						if (data !== 'OK') {
-							alert(data);
-						}
-					})
-					.catch(function (error) {
-						console.error(error);
-					});
-			});
-			*/
-
-
-
-			tableRetrait.on('row-reordered', function (e, diff) {
-				if (diff.length === 0) {return;}
-				const hausses = [];
-				const aElements = document.querySelectorAll('#retraitHausses tbody tr a');
-				aElements.forEach(function (aElement) {
-					const href = aElement.getAttribute('href');
-					hausses.push(href.substring(href.lastIndexOf('/') + 1));
-				});
-				const xhr = new XMLHttpRequest();
-				xhr.open('POST', urlRucheOdreHause + rucheId, true);
-				xhr.setRequestHeader('Content-Type', 'application/json');
-				xhr.setRequestHeader('x-csrf-token', _csrf_token);
-				xhr.onreadystatechange = () => {
-					if (xhr.readyState === XMLHttpRequest.DONE && xhr.status === 200) {
-						if (xhr.responseText !== 'OK') {
-							alert(xhr.responseText);
-						}
-					}
-				};
-				xhr.send(JSON.stringify(hausses));
-			});
-			new DataTable('#ajoutHausses');
-		});
 	</script>
 </head>
 
