--- a/src/main/resources/templates/evenement/evenementForm.html
+++ b/src/main/resources/templates/evenement/evenementForm.html
@@ -5,67 +5,9 @@
 	<script th:replace="~{include :: jsdatetimepicker}"></script>
 	<link th:replace="~{include :: cssdatetimepicker}" />
 	<script th:replace="~{include :: localejsdatetimepicker}"></script>
+	<script th:replace="~{include :: jsruches}"></script>
 	<script th:inline="javascript">
 		const complet = /*[[${complet}]]*/ null;
-		document.addEventListener('DOMContentLoaded', () => {
-			const ruchesClass = document.querySelectorAll('.ruches');
-			if (complet === 'true') {
-				document.getElementById('showruches').checked = true;
-				ruchesClass.forEach(item => {
-					item.style.display = 'block';
-				});
-			}
-			document.getElementById('showruches').addEventListener('click', event => {
-				ruchesClass.forEach(item => {
-					item.style.display = event.target.checked ? 'block' : 'none';
-				});
-			});
-			const form = $('#evenementForm');
-			const typ = $('#type');
-			form.validate({
-				errorClass: 'erreur-form',
-				errorPlacement: function (error, element) {
-					error.insertBefore(element.closest('div'));
-				},
-				rules: {
-					date: {
-						required: true
-					},
-					ruche: {
-						required: function () {
-							return ['RUCHEAJOUTRUCHER', 'AJOUTESSAIMRUCHE', 'HAUSSEPOSERUCHE', 'HAUSSERETRAITRUCHE',
-								'COMMENTAIRERUCHE']
-								.includes(typ.val());
-						}
-					},
-					rucher: {
-						required: function () {
-							return ['RUCHEAJOUTRUCHER', 'COMMENTAIRERUCHER']
-								.includes(typ.val());
-						}
-					},
-					essaim: {
-						required: function () {
-							return ['AJOUTESSAIMRUCHE', 'ESSAIMTRAITEMENT', 'ESSAIMTRAITEMENTFIN', 'ESSAIMSUCRE',
-								'COMMENTAIREESSAIM', 'ESSAIMDISPERSION', 'RUCHEPESEE', 'RUCHECADRE']
-								.includes(typ.val());
-						}
-					},
-					hausse: {
-						required: function () {
-							return ['HAUSSEPOSERUCHE', 'HAUSSERETRAITRUCHE', 'HAUSSEREMPLISSAGE', 'COMMENTAIREHAUSSE']
-								.includes(typ.val());
-						}
-					}
-				}
-			});
-			/*[- Pour trier les noms de types d'événements -]*/
-			const selOpt = typ.val();
-			typ.html($('#type option').sort(function (a, b) {
-				return a.text === b.text ? 0 : a.text < b.text ? -1 : 1;
-			})).val(selOpt);
-			typ.change(function () {form.valid();});
-		});
 	</script>
 </head>
 
