--- a/src/main/resources/templates/recolte/recolteForm.html
+++ b/src/main/resources/templates/recolte/recolteForm.html
@@ -5,37 +5,7 @@
 	<script th:replace="~{include :: jsdatetimepicker}"></script>
 	<link th:replace="~{include :: cssdatetimepicker}" />
 	<script th:replace="~{include :: localejsdatetimepicker}"></script>
-	<script th:inline="javascript">
-		document.addEventListener('DOMContentLoaded', () => {
-			document.getElementById('typeMiel').focus();
-			$('#recolteForm').validate({
-				errorClass: 'erreur-form',
-				errorPlacement: function (error, element) {
-					error.insertBefore(element.closest('div'));
-				},
-				rules: {
-					date: {
-						required: true
-					},
-					poidsMiel: {
-						required: true
-					}
-				}
-			});
-			/*[- Pour trier les noms de types de miel -]*/
-			const selectElement = document.getElementById('typeMiel');
-			const selOpt = selectElement.value;
-			const optionElements = Array.from(selectElement.querySelectorAll('option'));
-			optionElements.sort(function (a, b) {
-				return a.textContent === b.textContent ? 0 : a.textContent < b.textContent ? -1 : 1;
-			});
-			selectElement.innerHTML = '';
-			for (const option of optionElements) {
-				selectElement.appendChild(option);
-			}
-			selectElement.value = selOpt;
-		});
-	</script>
+	<script th:replace="~{include :: jsruches}"></script>
 </head>
 
 <body>
