--- a/src/main/resources/templates/rucher/rucherDetail.html
+++ b/src/main/resources/templates/rucher/rucherDetail.html
@@ -127,10 +127,25 @@
 			</tbody>
 		</table>
 		<h6 th:unless="${#arrays.length(ruches)}" th:text="#{Pasderuche}"></h6>
+
 		<th:block th:if="${#arrays.length(ruches)}">
-			<h6 th:if="${nbHausses}"
-				th:text="#{listeXRuches(${#arrays.length(ruches)})} + '. ' + #{nbXHausses(${nbHausses})}"></h6>
-			<h6 th:unless="${nbHausses}" th:text="#{listeXRuches(${#arrays.length(ruches)})}"></h6>
+
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col">
+						<h6 class="item" th:if="${nbHausses}"
+							th:text="#{listeXRuches(${#arrays.length(ruches)})} + '. ' + #{nbXHausses(${nbHausses})}">
+						</h6>
+						<h6 class="item" th:unless="${nbHausses}" th:text="#{listeXRuches(${#arrays.length(ruches)})}">
+						</h6>
+					</div>
+					<div class="col">
+						<a th:href="@{'/rucher/poidsruches/'+${rucher.id}}" class="bi-table"
+							th:title="#{creerPesee}" aria-hidden="true"></a>
+					</div>
+				</div>
+			</div>
+
 			<table class="table table-sm table-bordered table-striped" id="ruches">
 				<thead>
 					<tr>
