personne ajout controles js et trim java pour adresse et login

--- a/src/main/resources/templates/personne/personneForm.html
+++ b/src/main/resources/templates/personne/personneForm.html
@@ -34,7 +34,12 @@
 						}
 					},
 					email: {email: true, emailExiste: true},
-					login: 'loginExiste'
+					login: {
+						loginExiste: true,
+						normalizer: function (value) {
+							return $.trim(value);
+						}
+					}
 				}
 			});
 		});
