html déclaration globals js DataTable et bootstrap pour eslint

--- a/src/main/resources/templates/essaim/essaimDispersionForm.html
+++ b/src/main/resources/templates/essaim/essaimDispersionForm.html
@@ -6,6 +6,7 @@
 	<link th:replace="~{include :: cssdatetimepicker}" />
 	<script th:replace="~{include :: localejsdatetimepicker}"></script>
 	<script th:inline="javascript">
+		/* globals bootstrap */
 		const doitEtreSupA = /*[[#{doitEtreSupA}]]*/null;
 		const dateFirst = /*[[${dateFirst}]]*/null;
 		const timeFirst = /*[[${timeFirst}]]*/null;
