--- a/src/main/resources/templates/essaim/essaimAssociation.html
+++ b/src/main/resources/templates/essaim/essaimAssociation.html
@@ -3,6 +3,7 @@
 
 <head th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 	<script th:inline="javascript">
+		/* globals DataTable */
 		document.addEventListener('DOMContentLoaded', () => {
 			const avecE = document.getElementById('avecEssaim');
 			const table = new DataTable('#associerRucheEssaim', {
