--- a/src/main/resources/templates/hausse/haussesListe.html
+++ b/src/main/resources/templates/hausse/haussesListe.html
@@ -3,6 +3,7 @@
 
 <head th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 	<script th:inline="javascript">
+		/* globals DataTable */
 		const Hausses = /*[[#{Hausses}]]*/ null;
 		const buttTxtPrint = /*[[#{buttontextprint}]]*/ null;
 		const buttTxtCol = /*[[#{buttontextcol}]]*/ null;
