--- a/src/main/resources/templates/recolte/recoltesStatEssaim.html
+++ b/src/main/resources/templates/recolte/recoltesStatEssaim.html
@@ -3,6 +3,7 @@
 
 <head th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 	<script th:inline="javascript">
+		/* globals DataTable */
 		const btnTxtPrint = /*[[#{buttontextprint}]]*/ null;
 		const recoltes = /*[[${recoltes}]]*/ null;
 		document.addEventListener('DOMContentLoaded', () => {
