--- a/src/main/resources/templates/rucher/rucherPoidsForm.html
+++ b/src/main/resources/templates/rucher/rucherPoidsForm.html
@@ -74,16 +74,21 @@
 					<th th:text="#{ruche}"></th>
 					<th th:text="#{poidskg}"></th>
 					<th th:text="#{PoidsVide}"></th>
+					<th th:text="#{Precedent}"></th>
 				</tr>
 			</thead>
 			<tbody>
-				<tr th:each="ruche, itemStat : ${ruches}">
+				<tr th:each="ruche, itemStat : ${ruches}" th:with="p=${evesPesee[itemStat.index]}">
 					<td hidden><input type="number" th:name="|idValLst[${itemStat.index}].id|" th:value="${ruche.id}" />
 					</td>
-					<td th:text="${ruche.nom}"></td>
+					<td><a th:href="@{'/ruche/'+${ruche.id}}" th:text="${ruche.nom}"></a></td>
 					<td><input type="number" th:min="${ruche.poidsVide}" max="80" step="0.001"
 							th:name="|idValLst[${itemStat.index}].valeur|" /></td>
 					<td th:text="${ruche.poidsVide}"></td>
+
+					<td th:text="(p == null) ? '' :
+						${#numbers.formatDecimal(p.valeur,1,2)}+' '+${#temporals.format(p.date,'dd/MM/yyyy')}">
+					</td>
 				</tr>
 			</tbody>
 		</table>
