templates html déclaration exported et globals pour eslint

--- a/src/main/resources/templates/essaim/essaimAssociation.html
+++ b/src/main/resources/templates/essaim/essaimAssociation.html
@@ -10,7 +10,7 @@
 				dom: 'lftip',
 				scrollX: true,
 			});
-			avecE.addEventListener('click', event => {
+			avecE.addEventListener('click', () => {
 				table.draw();
 			});
 			$.fn.dataTable.ext.search.push(
