--- a/src/main/resources/templates/rucher/rucherDetail.html
+++ b/src/main/resources/templates/rucher/rucherDetail.html
@@ -19,8 +19,8 @@
 		const ruchespesee = /*[[${ruchespesee}]]*/ null;
 		document.addEventListener('DOMContentLoaded', () => {
 			if (ruchespesee) {
-				alert("Événement(s) Pesée créé(s) ruche(s)\n" + ruchespesee);
-			} else if (ruchespesee === "") {
+				alert('Événement(s) Pesée créé(s) ruche(s)\n' + ruchespesee);
+			} else if (ruchespesee === '') {
 				alert("Pas d'événement Pesée créé");
 			}
 			document.getElementById('supprime').addEventListener('click', event => {
