--- a/src/main/resources/templates/essaim/essaimsStatAges.html
+++ b/src/main/resources/templates/essaim/essaimsStatAges.html
@@ -8,6 +8,9 @@
 	<script th:replace="~{include :: d3-scale-chromatic}"></script>
 	<script th:replace="~{include :: jsruches}"></script>
 	<script th:inline="javascript">
+		/* exported agesHisto, pas, ageMinJours, ageMaxJours, Max, Min, ageMoyenJours, 
+		EcartType, ageVarianceJours, Moyenne
+		*/
 		const pas = /*[[${pas}]]*/ null;
 		const agesHisto = /*[[${agesHisto}]]*/ null;
 		const ageMoyenJours = /*[[${ageMoyenJours}]]*/ null;
