--- a/src/main/resources/templates/evenement/evenementCadreRucheListe.html
+++ b/src/main/resources/templates/evenement/evenementCadreRucheListe.html
@@ -7,6 +7,8 @@
 	<link th:replace="~{include :: cssjquerydaterangepicker}" />
 	<script th:replace="~{include :: jsruchesnom('evenementListe')}"></script>
 	<script th:inline="javascript">
+		/* exported Evenements, buttontextprint, buttontextcol */
+		/* globals evenementListe */
 		const Evenements = /*[[#{evenementcadreruche}]]*/ null;
 		const buttontextprint = /*[[#{buttontextprint}]]*/null;
 		const buttontextcol = /*[[#{buttontextcol}]]*/null;
