--- a/src/main/resources/templates/evenement/evenementForm.html
+++ b/src/main/resources/templates/evenement/evenementForm.html
@@ -7,6 +7,7 @@
 	<script th:replace="~{include :: localejsdatetimepicker}"></script>
 	<script th:replace="~{include :: jsruches}"></script>
 	<script th:inline="javascript">
+		/* exported complet */
 		const complet = /*[[${complet}]]*/ null;
 	</script>
 </head>
