--- a/src/main/resources/templates/evenement/evenementListe.html
+++ b/src/main/resources/templates/evenement/evenementListe.html
@@ -7,6 +7,8 @@
 	<link th:replace="~{include :: cssjquerydaterangepicker}" />
 	<script th:replace="~{include :: jsruches}"></script>
 	<script th:inline="javascript">
+		/* exported Evenements, buttontextprint, buttontextcol */
+		/* globals evenementListe */
 		const Evenements = /*[[#{evenements}]]*/ null;
 		const buttontextprint = /*[[#{buttontextprint}]]*/ null;
 		const buttontextcol = /*[[#{buttontextcol}]]*/ null;
