--- a/src/main/resources/templates/evenement/evenementNotifListe.html
+++ b/src/main/resources/templates/evenement/evenementNotifListe.html
@@ -4,6 +4,8 @@
 <head th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 	<script th:replace="~{include :: jsruches}"></script>
 	<script th:inline="javascript">
+		/* exported
+		url, Evenements, Notifications, btp, btc */
 		const url = /*[[@{'/evenement/listeNotif/'}]]*/null;
 		const Evenements = /*[[#{evenements}]]*/ null;
 		const Notifications = /*[[#{Notifications}]]*/ null;
