--- a/src/main/resources/templates/hausse/hausseDetail.html
+++ b/src/main/resources/templates/hausse/hausseDetail.html
@@ -4,6 +4,10 @@
 <head th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 	<script th:replace="~{include :: jsruches}"></script>
 	<script th:inline="javascript">
+		/* exported
+		_csrf_token	_csrf_param_name haussenoms recolteHausses haussesupp supphausseeve
+		supphausse nomhaussesv nomexistentdeja  evenements  urlclone  hausseid  hausses  creer
+ 		*/
 		const _csrf_token = /*[[${_csrf.token}]]*/ null;
 		const _csrf_param_name = /*[[${_csrf.parameterName}]]*/ null;
 		const haussenoms = /*[[${haussenoms}]]*/ null;
