--- a/src/main/resources/templates/recolte/recolteHausseForm.html
+++ b/src/main/resources/templates/recolte/recolteHausseForm.html
@@ -4,6 +4,7 @@
 <head th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 	<script th:replace="~{include :: jsruches}"></script>
 	<script th:inline="javascript">
+		/* exported pdsAvSupPdsAp, ruchesurl, essaimId, rucheId, rucherId */
 		const pdsAvSupPdsAp = /*[[#{poidsAvantSupPoidsApres}]]*/ null;
 		const ruchesurl = /*[[@{/}]]*/ null;
 		const essaimId = /*[[${detailRecolte.essaim?.id}]]*/ null;
