--- a/src/main/resources/templates/recolte/recoltesListe.html
+++ b/src/main/resources/templates/recolte/recoltesListe.html
@@ -4,6 +4,7 @@
 <head th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 	<script th:replace="~{include :: jsruches}"></script>
 	<script th:inline="javascript">
+		/* exported Recoltes, buttontextprint, buttontextcol */
 		const Recoltes = /*[[#{Recoltes}]]*/null;
 		const buttontextprint = /*[[#{buttontextprint}]]*/null;
 		const buttontextcol = /*[[#{buttontextcol}]]*/null;
