--- a/src/main/resources/templates/recolte/recoltesStatProd.html
+++ b/src/main/resources/templates/recolte/recoltesStatProd.html
@@ -8,6 +8,9 @@
 	<script th:replace="~{include :: d3-interpolate}"></script>
 	<script th:replace="~{include :: d3-scale-chromatic}"></script>
 	<script th:inline="javascript">
+		/* exported Chart, Hausses, Pots, HaussesEssaim,
+			poidsMielHausses, poidsMielPots, debutAnnee, nbIEssaims
+		*/
 		const poidsMielHausses = /*[[${poidsMielHausses}]]*/null;
 		const poidsMielPots = /*[[${poidsMielPots}]]*/null;
 		const debutAnnee = /*[[${debutAnnee}]]*/null;
