--- a/src/main/resources/templates/ruche/rucheAjoutRetrait.html
+++ b/src/main/resources/templates/ruche/rucheAjoutRetrait.html
@@ -4,6 +4,7 @@
 <head th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 	<script th:replace="~{include :: jsruches}"></script>
 	<script th:inline="javascript">
+		/* exported _csrf_token, urlRucheOdreHause, rucheId, DataTable */
 		const _csrf_token = /*[[${_csrf.token}]]*/null;
 		const urlRucheOdreHause = /*[[@{/ruche/ordreHausses/}]]*/null;
 		const rucheId = /*[[${ruche.id}]]*/null;
