--- a/src/main/resources/templates/ruche/rucheDetail.html
+++ b/src/main/resources/templates/ruche/rucheDetail.html
@@ -4,6 +4,10 @@
 <head th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 	<script th:replace="~{include :: jsruches}"></script>
 	<script th:inline="javascript">
+		/* exported _csrf_token, _csrf_param_name, ruchenoms, rnpsupprec,
+		recolteHausses, evenements, suppreven, suppruche, nruchvirg,
+		nexisted, Ruches, creer, urlclone, rucheid
+ 		*/
 		const _csrf_token = /*[[${_csrf.token}]]*/ null;
 		const _csrf_param_name = /*[[${_csrf.parameterName}]]*/ null;
 		const ruchenoms = /*[[${ruchenoms}]]*/ null;
