--- a/src/main/resources/templates/rucher/rucherDetailGg.html
+++ b/src/main/resources/templates/rucher/rucherDetailGg.html
@@ -4,6 +4,11 @@
 <head th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 	<script th:replace="~{include :: jsruches}"></script>
 	<script th:inline="javascript">
+		/* exported google, exportGpx, exportKml,
+		rucheParcours:writable, distParcours:writable, rucher, rucherMapZoom, longitudeCentre, latitudeCentre,
+	 	rayonsButinage, distButinage, urlruches, nomHausses, essaimtxt, pasdessaimtxt,
+	 	ruchetxt, haussestxt, pasdehaussetxt, ruches, ruchestxt, distancedeparcourstxt,
+	 	entreetxt, _csrf_token */
 		let rucheParcours = /*[[${rucheParcours}]]*/ null;
 		let distParcours = /*[[${distParcours}]]*/ null;
 		const rucher = /*[[${rucher}]]*/ null;
