--- a/src/main/resources/templates/rucher/rucherDetailIgn.html
+++ b/src/main/resources/templates/rucher/rucherDetailIgn.html
@@ -10,6 +10,14 @@
 	<script th:replace="~{include :: jsruchesnom('rucherDetailCarto')}"></script>
 	<script th:replace="~{include :: dom-to-image}"></script>
 	<script th:inline="javascript">
+		/* exported ol, domtoimage, jsPDF, exportGpx, exportKml,
+   		rucheParcours:writable, distParcours:writable, longitudeCentre, latitudeCentre, rayonsButinage, cercles, distButinage, ruches, 
+   		rucher, nomHausses, rapprochertxt, pleinecran, lesRuches, couchemarqueursruches, essaimtxt, pasdessaimtxt, 
+   		ruchetxt, lesHausses, pasdehaussetxt, parcourstxt, ignCarteLiscense,
+   		parcoursoptimumtxt, ruchestxt, distancedeparcourstxt, entreetxt, ruchesurl, _csrf_token, dessinEnregistretxt,
+   		distRuchesOk, distMaxRuche, geoloc, bootstrap
+   		*/
+		/* globals rucherDetail jsPDF */
 		let rucheParcours = /*[[${rucheParcours}]]*/ null;
 		let distParcours = /*[[${distParcours}]]*/ null;
 		const longitudeCentre = /*[[${longitudeCentre}]]*/ null;
