--- a/src/main/resources/templates/rucher/rucherDetailOsm.html
+++ b/src/main/resources/templates/rucher/rucherDetailOsm.html
@@ -9,9 +9,16 @@
 	<script th:replace="~{include :: dom-to-image}"></script>
 	<script th:replace="~{include :: jspdf}"></script>
 	<script th:inline="javascript">
+		/* exported ol, domtoimage, jsPDF, exportGpx, exportKml,
+   		rucheParcours:writable, distParcours:writable, longitudeCentre, latitudeCentre, rayonsButinage, cercles, distButinage, ruches, 
+   		rucher, nomHausses, rapprochertxt, pleinecran, lesRuches, couchemarqueursruches, essaimtxt, pasdessaimtxt, 
+   		ruchetxt, lesHausses, pasdehaussetxt, parcourstxt, ignCarteLiscense,
+   		parcoursoptimumtxt, ruchestxt, distancedeparcourstxt, entreetxt, ruchesurl, _csrf_token, dessinEnregistretxt,
+   		distRuchesOk, distMaxRuche, geoloc, bootstrap
+   		*/
+		/* globals rucherDetail jsPDF */
 		let rucheParcours = /*[[${rucheParcours}]]*/ null;
 		let distParcours = /*[[${distParcours}]]*/ null;
-		const rucherMapZoom = /*[[${@environment.getProperty('rucher.map.zoom')}]]*/ null;
 		const longitudeCentre = /*[[${longitudeCentre}]]*/ null;
 		const latitudeCentre = /*[[${latitudeCentre}]]*/ null;
 		const rayonsButinage = /*[[${rayonsButinage}]]*/ null;
