--- a/src/main/resources/templates/rucher/rucherMeteo.html
+++ b/src/main/resources/templates/rucher/rucherMeteo.html
@@ -5,6 +5,8 @@
 	<script th:replace="~{include :: jsChart}"></script>
 	<script th:replace="~{include :: jsruches}"></script>
 	<script th:inline="javascript">
+		/* exported longitude,latitude,openweathermapKey,urlPrefix,Chart */
+		/* globals rucherMeteo */
 		const longitude = /*[[${rucher.longitude}]]*/ null;
 		const latitude = /*[[${rucher.latitude}]]*/ null;
 		const openweathermapKey = /*[[${@environment.getProperty('openweathermap.key')}]]*/ null;
