--- a/src/main/resources/templates/rucher/ruchersListeOsm.html
+++ b/src/main/resources/templates/rucher/ruchersListeOsm.html
@@ -6,6 +6,10 @@
 	<script th:replace="~{include :: jsGpOsmPluginOpenLayers}"></script>
 	<script th:replace="~{include :: jsruchesnom('rucherListeOl')}"></script>
 	<script th:inline="javascript">
+		/* exported ol, ruchers, nomRuches, lesRucherstxt,	lesRuchestxt, pasderuchetxt, 
+		ruchertxt, couchemarqueursrucherstxt, ignCarteLiscense,
+		pleinecrantxt, urlruches, _csrf_token, bootstrap */
+		/* globals rucherListeIgn */
 		const ruchers = /*[[${ruchers}]]*/ null;
 		const nomRuches = /*[[${rucheNoms}]]*/ null;
 		const lesRucherstxt = /*[[#{Ruchers}]]*/ null;
