rucherPoidsForm lien vers eve pesée précédent, form table-responsive

--- a/src/main/resources/templates/recolte/recolteMielForm.html
+++ b/src/main/resources/templates/recolte/recolteMielForm.html
@@ -76,7 +76,7 @@
 		</div>
 	</div>
 	<form action="#" th:action="@{'/recolte/haussesMiel/sauve/'+${recolte.id}}" method="post" id="recolteMielForm">
-		<table class="table table-bordered table-striped table-responsive" id="recolteMielTable">
+		<table class="table table-sm table-bordered table-striped" id="recolteMielTable">
 			<thead>
 				<tr>
 					<th hidden></th>
