--- a/src/main/resources/templates/rucher/rucherPoidsForm.html
+++ b/src/main/resources/templates/rucher/rucherPoidsForm.html
@@ -63,16 +63,17 @@
 			</div>
 		</div>
 	</div>
-	<form action="#" th:action="@{'/rucher/poidsruches/sauve/'+${rucher.id}}" method="post" id="ruchesPoidsForm">
+	<form class="table-responsive" action="#" th:action="@{'/rucher/poidsruches/sauve/'+${rucher.id}}" method="post"
+		id="ruchesPoidsForm">
 		<div th:replace="~{includeForm :: date}"></div>
 		<div th:replace="~{includeForm :: commentaire}"></div>
-		<table class="table table-bordered table-striped table-responsive" id="ruchesPoidsTbl">
+		<table class="table table-sm table-bordered table-striped" id="ruchesPoidsTbl">
 			<thead>
 				<tr>
 					<th hidden></th>
 					<th th:text="#{ruche}"></th>
-					<th th:text="#{poidskg}"></th>
 					<th th:text="#{PoidsVide}"></th>
+					<th th:text="#{poidskg}"></th>
 					<th th:text="#{Precedent}"></th>
 				</tr>
 			</thead>
@@ -81,11 +82,10 @@
 					<td hidden><input type="number" th:name="|idValLst[${itemStat.index}].id|" th:value="${ruche.id}" />
 					</td>
 					<td><a th:href="@{'/ruche/'+${ruche.id}}" th:text="${ruche.nom}"></a></td>
+					<td th:text="${ruche.poidsVide}"></td>
 					<td><input type="number" th:min="${ruche.poidsVide}" max="80" step="0.001"
 							th:name="|idValLst[${itemStat.index}].valeur|" /></td>
-					<td th:text="${ruche.poidsVide}"></td>
-
-					<td th:text="(p == null) ? '' :
+					<td><a th:href="@{'/evenement/'+${p.id}}" th:text="(p == null) ? '' :
 						${#numbers.formatDecimal(p.valeur,1,2)}+' '+${#temporals.format(p.date,'dd/MM/yyyy')}">
 					</td>
 				</tr>
